# DataportalClient

./: .gitignore  .ruff.toml  README.md  pyproject.toml  versions.py
interfaces/: pycalltest.jl  reticulatetest.r
src/dataportal/: __init__.py  chunkedlist.py  dataportalclient.py  logger.py  versions.py
tests/: database.py  settings.py  test_dataportal.py  test_dataportal_systests.py
tests/testfiles/: logfile.json  metricfile.csv
